--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,21 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
+# DB_CONNECTION=sqlite
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+DB_CONNECTION=mongodb
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_DATABASE=keijidb
+DB_USERNAME=root
+DB_PASSWORD=hogehoge
+DB_AUTHENTICATION_DATABASE=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
